--- a/intro-to-tensorflow/intro_to_tensorflow.ipynb
+++ b/intro-to-tensorflow/intro_to_tensorflow.ipynb
@@ -26,11 +26,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All modules imported.\n"
+     ]
+    }
+   ],
    "source": [
     "import hashlib\n",
     "import os\n",
@@ -57,11 +65,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All files downloaded.\n"
+     ]
+    }
+   ],
    "source": [
     "def download(url, file):\n",
     "    \"\"\"\n",
@@ -90,11 +106,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 210001/210001 [00:30<00:00, 6899.88files/s]\n",
+      "100%|██████████| 10001/10001 [00:01<00:00, 7018.35files/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All features and labels uncompressed.\n"
+     ]
+    }
+   ],
    "source": [
     "def uncompress_features_labels(file):\n",
     "    \"\"\"\n",
@@ -164,11 +196,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# Problem 1 - Implement Min-Max scaling for grayscale image data\n",
     "def normalize_grayscale(image_data):\n",
@@ -178,8 +218,16 @@
     "    :return: Normalized image data\n",
     "    \"\"\"\n",
     "    # TODO: Implement Min-Max scaling for grayscale image data\n",
-    "\n",
-    "\n",
+    "    a = 0.1\n",
+    "    b = 0.9\n",
+    "    \n",
+    "    xmin = np.min(image_data)\n",
+    "    xmax = np.max(image_data)\n",
+    "    \n",
+    "    min_max_scaling = lambda x: ((x - xmin) * (b - a) / (xmax - xmin)) + a\n",
+    "    \n",
+    "    return [min_max_scaling(x) for x in image_data]\n",
+    "    \n",
     "### DON'T MODIFY ANYTHING BELOW ###\n",
     "# Test Cases\n",
     "np.testing.assert_array_almost_equal(\n",
@@ -202,11 +250,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labels One-Hot Encoded\n"
+     ]
+    }
+   ],
    "source": [
     "if not is_labels_encod:\n",
     "    # Turn labels into numbers and apply One-Hot Encoding\n",
@@ -225,11 +281,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training features and labels randomized and split.\n"
+     ]
+    }
+   ],
    "source": [
     "assert is_features_normal, 'You skipped the step to normalize the features'\n",
     "assert is_labels_encod, 'You skipped the step to One-Hot Encode the labels'\n",
@@ -246,11 +310,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving data to pickle file...\n",
+      "Data cached in pickle file.\n"
+     ]
+    }
+   ],
    "source": [
     "# Save the data for easy access\n",
     "pickle_file = 'notMNIST.pickle'\n",
@@ -285,11 +358,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kippesp/anaconda/envs/dlnd-tf-lab/lib/python3.5/site-packages/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
+      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n",
+      "/Users/kippesp/anaconda/envs/dlnd-tf-lab/lib/python3.5/site-packages/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
+      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data and modules loaded.\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "\n",
@@ -630,7 +721,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
