--- a/transfer-learning/Transfer_Learning.ipynb
+++ b/transfer-learning/Transfer_Learning.ipynb
@@ -26,13 +26,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parameter file already exists!\n"
+     ]
+    }
+   ],
    "source": [
     "from urllib.request import urlretrieve\n",
     "from os.path import isfile, isdir\n",
@@ -75,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -169,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -188,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -222,7 +230,67 @@
     "editable": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/kippesp/projects/udacity/2017_deep_learning_nano/deep-learning/transfer-learning/tensorflow_vgg/vgg16.npy\n",
+      "npy file loaded\n",
+      "build model started\n",
+      "build model finished: 0s\n",
+      "Starting roses images\n",
+      "10 images processed\n",
+      "20 images processed\n",
+      "30 images processed\n",
+      "40 images processed\n",
+      "50 images processed\n",
+      "60 images processed\n",
+      "70 images processed\n",
+      "80 images processed\n",
+      "90 images processed\n",
+      "100 images processed\n",
+      "110 images processed\n",
+      "120 images processed\n",
+      "130 images processed\n",
+      "140 images processed\n",
+      "150 images processed\n",
+      "160 images processed\n",
+      "170 images processed\n",
+      "180 images processed\n",
+      "190 images processed\n",
+      "200 images processed\n",
+      "210 images processed\n",
+      "220 images processed\n",
+      "230 images processed\n",
+      "240 images processed\n",
+      "250 images processed\n",
+      "260 images processed\n",
+      "270 images processed\n",
+      "280 images processed\n",
+      "290 images processed\n",
+      "300 images processed\n",
+      "310 images processed\n",
+      "320 images processed\n",
+      "330 images processed\n",
+      "340 images processed\n",
+      "350 images processed\n",
+      "360 images processed\n",
+      "370 images processed\n",
+      "380 images processed\n",
+      "390 images processed\n",
+      "400 images processed\n",
+      "410 images processed\n",
+      "420 images processed\n",
+      "430 images processed\n",
+      "440 images processed\n",
+      "450 images processed\n",
+      "460 images processed\n",
+      "470 images processed\n",
+      "480 images processed\n"
+     ]
+    }
+   ],
    "source": [
     "# Set the batch size higher if you can fit in in your GPU memory\n",
     "batch_size = 10\n",
@@ -235,6 +303,9 @@
     "with tf.Session() as sess:\n",
     "    \n",
     "    # TODO: Build the vgg network here\n",
+    "    vgg = vgg16.Vgg16()\n",
+    "    input_ = tf.placeholder(tf.float32, [None, 224, 224, 3])\n",
+    "    vgg.build(input_)\n",
     "\n",
     "    for each in classes:\n",
     "        print(\"Starting {} images\".format(each))\n",
@@ -254,7 +325,7 @@
     "                images = np.concatenate(batch)\n",
     "                \n",
     "                # TODO: Get the values from the relu6 layer of the VGG network\n",
-    "                codes_batch = \n",
+    "                codes_batch = sess.run(vgg.relu6, feed_dict={input_ : images})\n",
     "                \n",
     "                # Here I'm building an array of the codes\n",
     "                if codes is None:\n",
@@ -688,7 +759,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.4"
   },
   "widgets": {
    "state": {},
