ready to build the network

--- a/tv-script-generation/dlnd_tv_script_generation.ipynb
+++ b/tv-script-generation/dlnd_tv_script_generation.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -47,15 +47,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset Stats\n",
+      "Roughly the number of unique words: 11492\n",
+      "Number of scenes: 262\n",
+      "Average number of sentences in each scene: 15.248091603053435\n",
+      "Number of lines: 4257\n",
+      "Average number of words in each line: 11.50434578341555\n",
+      "\n",
+      "The sentences 0 to 50:\n",
+      "Moe_Szyslak: (INTO PHONE) Moe's Tavern. Where the elite meet to drink.\n",
+      "Bart_Simpson: Eh, yeah, hello, is Mike there? Last name, Rotch.\n",
+      "Moe_Szyslak: (INTO PHONE) Hold on, I'll check. (TO BARFLIES) Mike Rotch. Mike Rotch. Hey, has anybody seen Mike Rotch, lately?\n",
+      "Moe_Szyslak: (INTO PHONE) Listen you little puke. One of these days I'm gonna catch you, and I'm gonna carve my name on your back with an ice pick.\n",
+      "Moe_Szyslak: What's the matter Homer? You're not your normal effervescent self.\n",
+      "Homer_Simpson: I got my problems, Moe. Give me another one.\n",
+      "Moe_Szyslak: Homer, hey, you should not drink to forget your problems.\n",
+      "Barney_Gumble: Yeah, you should only drink to enhance your social skills.\n",
+      "\n",
+      "\n",
+      "Moe_Szyslak: Ah, isn't that nice. Now, there is a politician who cares.\n",
+      "Barney_Gumble: If I ever vote, it'll be for him. (BELCH)\n",
+      "\n",
+      "\n",
+      "Barney_Gumble: Hey Homer, how's your neighbor's store doing?\n",
+      "Homer_Simpson: Lousy. He just sits there all day. He'd have a great job if he didn't own the place. (CHUCKLES)\n",
+      "Moe_Szyslak: (STRUGGLING WITH CORKSCREW) Crummy right-handed corkscrews! What does he sell?\n",
+      "Homer_Simpson: Uh, well actually, Moe...\n",
+      "HOMER_(CONT'D: I dunno.\n",
+      "\n",
+      "\n",
+      "Moe_Szyslak: Looks like this is the end.\n",
+      "Barney_Gumble: That's all right. I couldn't have led a richer life.\n",
+      "Barney_Gumble: So the next time somebody tells you county folk are good, honest people, you can spit in their faces for me!\n",
+      "Lisa_Simpson: I will, Mr. Gumbel. But if you'll excuse me, I'm profiling my dad for the school paper. I thought it would be neat to follow him around for a day to see what makes him tick.\n",
+      "Barney_Gumble: Oh, that's sweet. I used to follow my dad to a lot of bars too. (BELCH)\n",
+      "Moe_Szyslak: Here you go. One beer, one chocolate milk.\n",
+      "Lisa_Simpson: Uh, excuse me, I have the chocolate milk.\n",
+      "Moe_Szyslak: Oh.\n",
+      "Moe_Szyslak: What's the matter, Homer? The depressin' effects of alcohol usually don't kick in 'til closing time.\n",
+      "Lisa_Simpson: He's just a little nervous. (PROUDLY) He has to give a speech tomorrow on \"How To Keep Cool In A Crisis.\"\n",
+      "Homer_Simpson: (SOBS) What am I gonna do? What am I gonna do?\n",
+      "Barney_Gumble: Hey, I had to give a speech once. I was pretty nervous, so I used a little trick. I pictured everyone in their underwear. The judge, the jury, my lawyer, everybody.\n",
+      "Homer_Simpson: Did it work?\n",
+      "Barney_Gumble: I'm a free man, ain't I?\n",
+      "Barney_Gumble: Whoa!\n",
+      "Barney_Gumble: Huh? A pretzel? Wow, looks like I pulled a Homer!\n",
+      "\n",
+      "\n",
+      "Patrons: (MUMBLING, NOT IN UNISON) Happy thoughts... happy thoughts... we love that boy.\n",
+      "Moe_Szyslak: (INTO PHONE) Moe's Tavern. Hold on, I'll check. ... (LOUD) Hey everybody! I'm a stupid moron with an ugly face and a big butt, and my butt smells, and I like to kiss my own butt.\n",
+      "Barney_Gumble: That's a new one (LAUGHING).\n",
+      "Moe_Szyslak: Now wait a minute...\n",
+      "\n",
+      "\n",
+      "Homer_Simpson: Hurry, Moe, hurry! I've only got five minutes till the music store closes.\n",
+      "Moe_Szyslak: Why don't you go there first?\n",
+      "Homer_Simpson: Hey, do I tell you how to do your job?\n",
+      "Moe_Szyslak: Sorry, Homer.\n",
+      "Homer_Simpson: You know, if you tip the glass, there won't be so much foam on top.\n"
+     ]
+    }
+   ],
    "source": [
-    "view_sentence_range = (0, 10)\n",
+    "view_sentence_range = (0, 50)\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -101,13 +166,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import problem_unittests as tests\n",
@@ -119,7 +192,14 @@
     "    :return: A tuple of dicts (vocab_to_int, int_to_vocab)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "\n",
+    "    vocab = sorted(set(text))\n",
+    "    \n",
+    "    # create word-->ID and ID-->word dictionaries\n",
+    "    vocab_to_int = {word:idx for idx,word in enumerate(vocab)}\n",
+    "    int_to_vocab = dict(enumerate(vocab))\n",
+    "\n",
+    "    return vocab_to_int, int_to_vocab\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -155,13 +235,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def token_lookup():\n",
     "    \"\"\"\n",
@@ -169,7 +257,24 @@
     "    :return: Tokenize dictionary where the key is the punctuation and the value is the token\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    \n",
+    "    f = lambda w: '||' + w + '||'\n",
+    "    \n",
+    "    token_dict = {\n",
+    "        '.' :  f('period'),\n",
+    "        ',' :  f('comma'),\n",
+    "        '\"' :  f('quotation_mark'),\n",
+    "        ';' :  f('semicolon'),\n",
+    "        '!' :  f('exclamation_mark'),\n",
+    "        '?' :  f('question_mark'),\n",
+    "        '(' :  f('left_parenthesis'),\n",
+    "        ')' :  f('right_parenthesis'),\n",
+    "        #'-' :  f('dash'),\n",
+    "        '--' : f('em_dash'),\n",
+    "        '\\n' : f('new_line')\n",
+    "    }\n",
+    "    \n",
+    "    return token_dict\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -190,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -218,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -257,11 +362,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TensorFlow Version: 1.3.0\n",
+      "Default GPU Device: /gpu:0\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -296,13 +410,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_inputs():\n",
     "    \"\"\"\n",
@@ -310,8 +432,12 @@
     "    :return: Tuple (input, targets, learning rate)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None, None\n",
-    "\n",
+    "    \n",
+    "    input = tf.placeholder(tf.int32, (None, None), name='input')\n",
+    "    targets = tf.placeholder(tf.int32, (None, None), name='targets')\n",
+    "    learning_rate = tf.placeholder(tf.float32, name='learning_rate')\n",
+    "    \n",
+    "    return input, targets, learning_rate\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -337,13 +463,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_init_cell(batch_size, rnn_size):\n",
     "    \"\"\"\n",
@@ -353,7 +487,18 @@
     "    :return: Tuple (cell, initialize state)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    \n",
+    "    # See Anna_KaRNNa notebook\n",
+    "    \n",
+    "    build_cell = lambda lstm_size: tf.contrib.rnn.BasicLSTMCell(lstm_size)\n",
+    "    \n",
+    "    NUM_LAYERS = 2\n",
+    "    \n",
+    "    lstm = tf.contrib.rnn.MultiRNNCell([build_cell(rnn_size) for _ in range(NUM_LAYERS)])\n",
+    "    \n",
+    "    initial_state = tf.identity(lstm.zero_state(batch_size, tf.float32), 'initial_state')\n",
+    "    \n",
+    "    return lstm, initial_state\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -375,13 +520,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_embed(input_data, vocab_size, embed_dim):\n",
     "    \"\"\"\n",
@@ -392,8 +545,13 @@
     "    :return: Embedded input.\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
-    "\n",
+    "    \n",
+    "    # See Skip-Grams notebook\n",
+    "    \n",
+    "    embedding = tf.Variable(tf.random_uniform((vocab_size, embed_dim), -1, 1))\n",
+    "    embed = tf.nn.embedding_lookup(embedding, input_data)\n",
+    "    \n",
+    "    return embed\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -418,13 +576,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def build_rnn(cell, inputs):\n",
     "    \"\"\"\n",
@@ -434,8 +600,12 @@
     "    :return: Tuple (Outputs, Final State)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None\n",
-    "\n",
+    "    \n",
+    "    # See Anna_KaRNNa notebook\n",
+    "    \n",
+    "    outputs, state = tf.nn.dynamic_rnn(cell, inputs, dtype=tf.float32)\n",
+    "    \n",
+    "    return outputs, tf.identity(state, \"final_state\")\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -959,7 +1129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.4"
   },
   "widgets": {
    "state": {},
